[tool.poetry]
name = "tax-return-parser"
version = "0.1.0"
description = ""
authors = ["Agustín Covarrubias <agucova@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2021.4.4"
ray = {extras = ["default"], version = "^1.3.0"}
alive-progress = "^1.6.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
